Fix: 검증 오류 필드 순서 보존